Add new project

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="Assets/Divya-1.png" alt="Divya Ughade">
+                    <img src="Assets/Divya.jpeg" alt="Divya Ughade">
                 </div>
                 <div class="about-text">
                     <h3>Engineering Student & Frontend Developer</h3>
@@ -539,7 +539,6 @@
                         <h3>Higher Secondary Education</h3>
                         <p>Shri Shivaji Mahavidyalaya Barshi</p>
                         <p>2022 - 2024</p>
-                        <p>Completed with focus on JEE and CET</p>
                     </div>
                 </div>
                 <div class="timeline-item left">
@@ -652,15 +651,27 @@
                         </div>
                     </div>
                 </div>
-                 <div class="project">
+                <div class="project">
                     <div class="project-img">
                         <img src="Assets/portfolio-1.png" alt="Project 3">
                     </div>
                     <div class="project-info">
-                        <h3>Weather App</h3>
+                        <h3>Portfolio</h3>
                         <p>A Portfolio is built with html , css and javascript</p>
                         <div class="project-links">
                             <a href="https://divya-divyas-projects-b44bbb2d.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-img">
+                        <img src="Assets/IP_Sort.png" alt="Project 4">
+                    </div>
+                    <div class="project-info">
+                        <h3>IP_Sort</h3>
+                        <p>A IP_sort using radix sort is built with html , css and javascript</p>
+                        <div class="project-links">
+                            <a href="https://ip-sort.vercel.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                  </div>
