hide the Contact form

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Algorithms</span>
-                            <span>600px</span>
+                            <span>60%</span>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-progress" style="width: 50%;"></div>
@@ -611,7 +611,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>Problem Solving</span>
-                            <span>65%</span>
+                            <span>50%</span>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-progress" style="width: 65%;"></div>
@@ -679,10 +679,10 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section class="section contact" id="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <h2 class="section-title">Contact Me</h2>
+            <!-- Contact Section 
             <div class="contact-form">
                 <form>
                     <div class="form-group">
@@ -705,7 +705,7 @@
                 </form>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
